; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_a5xx_debugfs.c_a5xx_debugfs_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_a5xx_debugfs.c_a5xx_debugfs_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msm_gpu = type { i32 }
%struct.drm_minor = type { i32, %struct.drm_device* }
%struct.drm_device = type { i32 }

@a5xx_debugfs_list = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"could not install a5xx_debugfs_list\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"reset\00", align 1
@S_IWUGO = common dso_local global i32 0, align 4
@reset_fops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @a5xx_debugfs_init(%struct.msm_gpu* %0, %struct.drm_minor* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.msm_gpu*, align 8
  %5 = alloca %struct.drm_minor*, align 8
  %6 = alloca %struct.drm_device*, align 8
  %7 = alloca i32, align 4
  store %struct.msm_gpu* %0, %struct.msm_gpu** %4, align 8
  store %struct.drm_minor* %1, %struct.drm_minor** %5, align 8
  %8 = load %struct.drm_minor*, %struct.drm_minor** %5, align 8
  %9 = icmp ne %struct.drm_minor* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %38

11:                                               ; preds = %2
  %12 = load %struct.drm_minor*, %struct.drm_minor** %5, align 8
  %13 = getelementptr inbounds %struct.drm_minor, %struct.drm_minor* %12, i32 0, i32 1
  %14 = load %struct.drm_device*, %struct.drm_device** %13, align 8
  store %struct.drm_device* %14, %struct.drm_device** %6, align 8
  %15 = load i32, i32* @a5xx_debugfs_list, align 4
  %16 = load i32, i32* @a5xx_debugfs_list, align 4
  %17 = call i32 @ARRAY_SIZE(i32 %16)
  %18 = load %struct.drm_minor*, %struct.drm_minor** %5, align 8
  %19 = getelementptr inbounds %struct.drm_minor, %struct.drm_minor* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.drm_minor*, %struct.drm_minor** %5, align 8
  %22 = call i32 @drm_debugfs_create_files(i32 %15, i32 %17, i32 %20, %struct.drm_minor* %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %11
  %26 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %27 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @DRM_DEV_ERROR(i32 %28, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %30 = load i32, i32* %7, align 4
  store i32 %30, i32* %3, align 4
  br label %38

31:                                               ; preds = %11
  %32 = load i32, i32* @S_IWUGO, align 4
  %33 = load %struct.drm_minor*, %struct.drm_minor** %5, align 8
  %34 = getelementptr inbounds %struct.drm_minor, %struct.drm_minor* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %37 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %32, i32 %35, %struct.drm_device* %36, i32* @reset_fops)
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %31, %25, %10
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @drm_debugfs_create_files(i32, i32, i32, %struct.drm_minor*) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @DRM_DEV_ERROR(i32, i8*) #1

declare dso_local i32 @debugfs_create_file(i8*, i32, i32, %struct.drm_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
